# jsonjsdb

./: .gitignore  .prettierignore  CHANGELOG.md  CONTRIBUTING.md  README.md  codecov.yml  eslint.config.ts  package-lock.json  package.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml  release.yml
jsonjsdb/: CHANGELOG.md  README.md  package.json  tsconfig.json  vite.config.ts
jsonjsdb-builder/: CHANGELOG.md  README.md  package.json  tsconfig.json
jsonjsdb-builder/src/: JsonjsdbBuilder.ts  TableSerializer.ts  compareDatasets.ts
jsonjsdb-builder/test/: JsonjsdbBuilder.test.ts
jsonjsdb-py/: .gitignore  CHANGELOG.md  LICENSE  Makefile  PLANNING.md  README.md  pyproject.toml
jsonjsdb-py/src/jsonjsdb/: __init__.py  database.py  evolution.py  loader.py  table.py  types.py  writer.py
jsonjsdb-py/tests/: test_evolution.py  test_jsonjsdb.py
jsonjsdb-py/tests/db/: __table__.json  email.json  folder.json  tag.json  user.json
jsonjsdb/src/: DBrowser.ts  IntegrityChecker.ts  Jsonjsdb.ts  Loader.ts  localData.ts  relationResolver.ts  types.ts
jsonjsdb/test/: DBrowser.test.ts  IntegrityChecker.test.ts  jsonjsdb.test.ts  loader.test.ts  localData.test.ts
jsonjsdb/test/db/gdf9898fds/: config.json  config.json.js  email.json  email.json.js  user.json  user.json.js
