[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jsonjsdb"
version = "0.2.1"
description = "Python library for JSONJS database loading"
authors = [{ name = "datannur" }]
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = ["polars>=1.0.0"]

[project.urls]
Homepage = "https://github.com/datannur/jsonjsdb"
Repository = "https://github.com/datannur/jsonjsdb"
Documentation = "https://github.com/datannur/jsonjsdb#readme"
Issues = "https://github.com/datannur/jsonjsdb/issues"

[dependency-groups]
dev = [
  "pytest",
  "pytest-cov",
  "ruff",
  "pyright>=1.1.400",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py39"

[tool.hatch.build.targets.wheel]
packages = ["src/jsonjsdb"]

[tool.hatch.build.targets.sdist]
include = ["src/jsonjsdb"]

[tool.pyright]
pythonVersion = "3.9"
typeCheckingMode = "standard"

[tool.coverage.run]
source = ["src/jsonjsdb"]
branch = true

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:", "@overload", "\\.\\.\\."]
